--- a/src/Solution.Locator.Core/Localization/SourceFiles/Locator-pt-BR.xml
+++ b/src/Solution.Locator.Core/Localization/SourceFiles/Locator-pt-BR.xml
@@ -18,7 +18,7 @@
     <text name="Password" value="Senha" />
     <text name="RememberMe" value="Lembre de mim" />
     <text name="LogIn" value="Entrar" />
-    <text name="Users" value="Usuário" />
+    <text name="Users" value="Usuários" />
     <text name="LoginFailed" value="Falha no login!" />
     <text name="Friends" value="Amigos" />
     <text name="Movies" value="Filmes" />
