--- a/src/Solution.Locator.Core/Localization/SourceFiles/Locator-pt-BR.xml
+++ b/src/Solution.Locator.Core/Localization/SourceFiles/Locator-pt-BR.xml
@@ -57,6 +57,7 @@
     <text name="TenantSelection" value="Seleção de Tenant" />
     <text name="TenantSelection_Detail" value="Por favor selecione um dos seguintes tenants." />
     <text name="Logout" value="Sair" />
+    <text name="Roles" value="Roles" />
 
   </texts>
 </localizationDictionary>
